--- a/addNote.html
+++ b/addNote.html
@@ -46,7 +46,7 @@
     </div>
     <div class="form-row">
         <label for="node-input-title"><i class="fa fa-title"></i> Note title</label>
-        <input type="text" id="node-input-title">
+        <input type="text" id="node-input-title" placeholder="Note title">
     </div>
 </script>
 
